# rag_implementations

./: .gitignore  README.md  app.py  main.py  pyproject.toml  requirements.txt  run.sh
config/: config.yaml
core/: __init__.py  base_rag.py  config_loader.py  document_loader.py  embeddings.py  llm_client.py  vector_store.py
data/sample_docs/: ai_and_rag_overview.txt  burlington_faq.md
data/vector_store/: chroma.sqlite3
evaluation/: __init__.py  ragas_evaluator.py
evaluation_results/: advanced_rag_llamaindex_eval.json  naive_rag_langchain_eval.json  naive_rag_llamaindex_eval.json
scripts/: run_technique.py
techniques/: __init__.py  _stub_template.py
techniques/01_naive_rag/: README.md  __init__.py  langchain_impl.py  llamaindex_impl.py
techniques/02_advanced_rag/: README.md  langchain_impl.py  llamaindex_impl.py
techniques/03_hyde_rag/: README.md  langchain_impl.py  llamaindex_impl.py
techniques/04_query_transform_rag/: README.md  langchain_impl.py
techniques/05_fusion_rag/: README.md  langchain_impl.py
techniques/06_parent_document_rag/: README.md  langchain_impl.py
techniques/07_reranking_rag/: README.md  langchain_impl.py
techniques/08_self_rag/: README.md  __init__.py  langchain_impl.py
techniques/09_corrective_rag/: README.md  langchain_impl.py
techniques/10_adaptive_rag/: README.md  langchain_impl.py
techniques/11_graph_rag/: README.md  langchain_impl.py
techniques/12_raptor_rag/: README.md  langchain_impl.py
techniques/13_agentic_rag/: README.md  langchain_impl.py
techniques/14_multimodal_rag/: README.md  langchain_impl.py
(+2 files in other folders)
